build/log/idf_py_stdout_output_821461
[1/11] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/init_camera.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/init_camera.c.obj 
/home/wish/.espressif/tools/xtensa-esp-elf/esp-13.2.0_20240530/xtensa-esp-elf/bin/xtensa-esp32s3-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.3.1\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/media/wish/Disk/esp/camera_example/build/config -I/media/wish/Disk/esp/camera_example/main -I/media/wish/Disk/esp/esp-idf/components/newlib/platform_include -I/media/wish/Disk/esp/esp-idf/components/freertos/config/include -I/media/wish/Disk/esp/esp-idf/components/freertos/config/include/freertos -I/media/wish/Disk/esp/esp-idf/components/freertos/config/xtensa/include -I/media/wish/Disk/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/media/wish/Disk/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/media/wish/Disk/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/media/wish/Disk/esp/esp-idf/components/freertos/esp_additions/include -I/media/wish/Disk/esp/esp-idf/components/esp_hw_support/include -I/media/wish/Disk/esp/esp-idf/components/esp_hw_support/include/soc -I/media/wish/Disk/esp/esp-idf/components/esp_hw_support/include/soc/esp32s3 -I/media/wish/Disk/esp/esp-idf/components/esp_hw_support/dma/include -I/media/wish/Disk/esp/esp-idf/components/esp_hw_support/ldo/include -I/media/wish/Disk/esp/esp-idf/components/esp_hw_support/port/esp32s3/. -I/media/wish/Disk/esp/esp-idf/components/esp_hw_support/port/esp32s3/include -I/media/wish/Disk/esp/esp-idf/components/heap/include -I/media/wish/Disk/esp/esp-idf/components/log/include -I/media/wish/Disk/esp/esp-idf/components/soc/include -I/media/wish/Disk/esp/esp-idf/components/soc/esp32s3 -I/media/wish/Disk/esp/esp-idf/components/soc/esp32s3/include -I/media/wish/Disk/esp/esp-idf/components/hal/platform_port/include -I/media/wish/Disk/esp/esp-idf/components/hal/esp32s3/include -I/media/wish/Disk/esp/esp-idf/components/hal/include -I/media/wish/Disk/esp/esp-idf/components/esp_rom/include -I/media/wish/Disk/esp/esp-idf/components/esp_rom/include/esp32s3 -I/media/wish/Disk/esp/esp-idf/components/esp_rom/esp32s3 -I/media/wish/Disk/esp/esp-idf/components/esp_common/include -I/media/wish/Disk/esp/esp-idf/components/esp_system/include -I/media/wish/Disk/esp/esp-idf/components/esp_system/port/soc -I/media/wish/Disk/esp/esp-idf/components/esp_system/port/include/private -I/media/wish/Disk/esp/esp-idf/components/xtensa/esp32s3/include -I/media/wish/Disk/esp/esp-idf/components/xtensa/include -I/media/wish/Disk/esp/esp-idf/components/xtensa/deprecated_include -I/media/wish/Disk/esp/esp-idf/components/esp_psram/include -I/media/wish/Disk/esp/camera_example/components/sd_card -I/media/wish/Disk/esp/esp-idf/components/fatfs/diskio -I/media/wish/Disk/esp/esp-idf/components/fatfs/src -I/media/wish/Disk/esp/esp-idf/components/fatfs/vfs -I/media/wish/Disk/esp/esp-idf/components/wear_levelling/include -I/media/wish/Disk/esp/esp-idf/components/esp_partition/include -I/media/wish/Disk/esp/esp-idf/components/sdmmc/include -I/media/wish/Disk/esp/esp-idf/components/esp_driver_sdmmc/include -I/media/wish/Disk/esp/esp-idf/components/esp_driver_gpio/include -I/media/wish/Disk/esp/esp-idf/components/esp_driver_sdspi/include -I/media/wish/Disk/esp/esp-idf/components/esp_driver_spi/include -I/media/wish/Disk/esp/esp-idf/components/esp_pm/include -I/media/wish/Disk/esp/esp-idf/components/esp_adc/include -I/media/wish/Disk/esp/esp-idf/components/esp_adc/interface -I/media/wish/Disk/esp/esp-idf/components/esp_adc/esp32s3/include -I/media/wish/Disk/esp/esp-idf/components/esp_adc/deprecated/include -I/media/wish/Disk/esp/camera_example/components/net -I/media/wish/Disk/esp/camera_example/components/BNN/include -I/media/wish/Disk/esp/esp-idf/components/nvs_flash/include -I/media/wish/Disk/esp/esp-idf/components/spi_flash/include -I/media/wish/Disk/esp/camera_example/managed_components/espressif__esp32-camera/driver/include -I/media/wish/Disk/esp/camera_example/managed_components/espressif__esp32-camera/conversions/include -I/media/wish/Disk/esp/esp-idf/components/driver/deprecated -I/media/wish/Disk/esp/esp-idf/components/driver/i2c/include -I/media/wish/Disk/esp/esp-idf/components/driver/touch_sensor/include -I/media/wish/Disk/esp/esp-idf/components/driver/twai/include -I/media/wish/Disk/esp/esp-idf/components/driver/touch_sensor/esp32s3/include -I/media/wish/Disk/esp/esp-idf/components/esp_ringbuf/include -I/media/wish/Disk/esp/esp-idf/components/esp_driver_pcnt/include -I/media/wish/Disk/esp/esp-idf/components/esp_driver_gptimer/include -I/media/wish/Disk/esp/esp-idf/components/esp_driver_mcpwm/include -I/media/wish/Disk/esp/esp-idf/components/esp_driver_ana_cmpr/include -I/media/wish/Disk/esp/esp-idf/components/esp_driver_i2s/include -I/media/wish/Disk/esp/esp-idf/components/esp_driver_sdio/include -I/media/wish/Disk/esp/esp-idf/components/esp_driver_dac/include -I/media/wish/Disk/esp/esp-idf/components/esp_driver_rmt/include -I/media/wish/Disk/esp/esp-idf/components/esp_driver_tsens/include -I/media/wish/Disk/esp/esp-idf/components/esp_driver_sdm/include -I/media/wish/Disk/esp/esp-idf/components/esp_driver_i2c/include -I/media/wish/Disk/esp/esp-idf/components/esp_driver_uart/include -I/media/wish/Disk/esp/esp-idf/components/vfs/include -I/media/wish/Disk/esp/esp-idf/components/esp_driver_ledc/include -I/media/wish/Disk/esp/esp-idf/components/esp_driver_parlio/include -I/media/wish/Disk/esp/esp-idf/components/esp_driver_usb_serial_jtag/include -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -mdisable-hardware-atomics -Og -fno-shrink-wrap -fmacro-prefix-map=/media/wish/Disk/esp/camera_example=. -fmacro-prefix-map=/media/wish/Disk/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/init_camera.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/init_camera.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/init_camera.c.obj -c /media/wish/Disk/esp/camera_example/main/init_camera.c
/media/wish/Disk/esp/camera_example/main/init_camera.c: In function 'get_32x32_jpg':
/media/wish/Disk/esp/camera_example/main/init_camera.c:175:41: warning: initialization of 'struct RGB_CH (*)[pic->width]' from incompatible pointer type 'uint8_t *' {aka 'unsigned char *'} [-Wincompatible-pointer-types]
  175 |     struct RGB_CH (*data)[pic->width] = pic->buf;
      |                                         ^~~
/media/wish/Disk/esp/camera_example/main/init_camera.c:178:12: error: 'buff' undeclared (first use in this function)
  178 |     memset(buff,0x00,sizeof(buff));
      |            ^~~~
/media/wish/Disk/esp/camera_example/main/init_camera.c:178:12: note: each undeclared identifier is reported only once for each function it appears in
[2/11] Performing build step for 'bootloader'
[1/1] cd /media/wish/Disk/esp/camera_example/build/bootloader/esp-idf/esptool_py && /home/wish/.espressif/python_env/idf5.3_py3.12_env/bin/python /media/wish/Disk/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x10000 bootloader 0x0 /media/wish/Disk/esp/camera_example/build/bootloader/bootloader.bin
Bootloader binary size 0x5810 bytes. 0xa7f0 bytes (66%) free.
[3/11] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/take_picture.c.obj
/media/wish/Disk/esp/camera_example/main/take_picture.c:54:20: warning: 'TAG' defined but not used [-Wunused-variable]
   54 | static const char *TAG = "example:take_picture";
      |                    ^~~
ninja: build stopped: subcommand failed.
